--- a/css/responsive.css
+++ b/css/responsive.css
@@ -22,7 +22,6 @@
       padding-left: 280px !important;
     }
     .badge-wrapper{
-        font-family: var(--roboto-bold-sub-heading);
         background: var(--red-main);
         color: var(--pure-white);
         padding: 5px 10px;
@@ -198,7 +197,7 @@ transition: 0.5s ease-in-out;
 .center__div ul li a span{
     position: absolute;
     top: 0px;
-    right: -54px;
+    right: -38px;
 }
 .signup-section{
     display: flex;
@@ -220,7 +219,6 @@ transition: 0.5s ease-in-out;
 
 /* *******************accordian H4*************************** */
 .ui-accordion .ui-accordion-header{
-    font-family: var(--roboto-bold-sub-heading);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -258,7 +256,6 @@ transition: 0.5s ease-in-out;
     box-sizing: border-box;
 }
 .accordion__div ul li a{
-    font-family: var();
     font-size: var(--font-size16);
     text-transform: capitalize;
     color: var(--pure-white);
@@ -280,7 +277,9 @@ transition: 0.5s ease-in-out;
     width: 100px;
 }
 /* *****END*********** */
-
+.price__range p{
+    font-size: var(--font-size11) !important;
+}
 }
 @media(max-width:1024px){
     .content ul li a{
@@ -307,7 +306,6 @@ transition: 0.5s ease-in-out;
      .button2{
         width: 130px;
         font-size: var(--font-size14);
-
     }
      .card-header h2 strong{
         font-size: var(--font-size14);
@@ -317,6 +315,17 @@ transition: 0.5s ease-in-out;
      }
      .card-content h6 strong{
         font-size: var(--font-size13);
+     }
+     .card-content p{
+        font-size: var(--font-size14);
+     }
+     .card-content h2 strong {
+        font-size: var(--font-size14);
+        text-overflow: ellipsis;
+        white-space: nowrap;
+     }
+     .card__block__element strong{
+        font-size: var(--font-size15);
      }
 }
 @media(max-width:992px){
@@ -341,7 +350,19 @@ transition: 0.5s ease-in-out;
     }
     .fa-inr,.fa-building,.fa-tasks,.font-reload,.fa-chart-line,.fa-file-lines,.fa-calculator,.fa-book{
         font-size: var(--font-size24);
+    }
+    .card__content__description__block{
+        justify-content: space-between !important;
     } 
+    .property p{
+        font-size: var(--font-size16);
+    }
+    .explore{
+        font-size: var(--font-size17) !important;
+    }
+    .property h2 strong{ 
+        font-size: var(--font-size20);
+    }
 }
 @media(max-width:768px){
     .logo a img{
@@ -470,6 +491,25 @@ transition: 0.5s ease-in-out;
         font-size: var(--font-size7);
         top: 3px;
     }
+    .Latest__Project__Gallery, 
+    .explore__properties,
+    .fresh__prop,
+    .trending__societies,
+    .counter__setting,
+    .jumbo,
+    .property__option,
+    .residential,
+    .blogspot,
+    .map,
+    .form-smartdeal,
+    .exclusive__owner__properties,
+    .Top__Projects,
+    .property__Services,
+    .Featured__Agents 
+    {
+        margin-top: 15px;
+    }
+ 
     
 }
 
@@ -518,7 +558,7 @@ transition: 0.5s ease-in-out;
         top: -67px;
     }
 .mega__link{
-    font-family: var(--montserrat-semibold-600-extra);
+    font-family: var(--montserrat-semibold);
     padding: 7px 10px;
     font-size: var(--font-size14);
     line-height: 1;
@@ -607,6 +647,7 @@ transition: 0.5s ease-in-out;
 .form-group .control-majno{
     font-size: var(--font-size10) !important;
 }
+
 }
 
 @media(max-width:360px){
@@ -674,7 +715,7 @@ transition: 0.5s ease-in-out;
         margin-top: 0px;
     }
     .badge-wrapper{
-        font-family: var(--font-size8);
+        font-size: var(--font-size8);
     }
     .btn-adjustment{
         padding: 5px 7px !important;
@@ -750,4 +791,23 @@ transition: 0.5s ease-in-out;
     .counter__setting .container .wrapper .counter__text{
         padding: 10px !important;
     }
+    .Latest__Project__Gallery, 
+.explore__properties,
+.fresh__prop,
+.trending__societies,
+.counter__setting,
+.jumbo,
+.property__option,
+.residential,
+.blogspot,
+.map,
+.form-smartdeal,
+.exclusive__owner__properties,
+.Top__Projects,
+.property__Services,
+.Featured__Agents 
+{
+    margin-top: 10px;
+}
+
 }
